--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -3,6 +3,7 @@
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
+        <a>error</a>
       <% end %>
     </ul>
   </div>
