--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,16 @@
-<h1>Books</h1>
- <table>
+<div class="container">
+  <p id="notice"></p>
+  <div class="row">
+  <div class="col-xs-3">
+   <% if flash[:notice] %>
+    <p><%= flash[:notice] %></p>
+   <% end %>
+<%= render 'books/list', user: @user, book: @book %>
+</div>
+<h2>Books</h2>
+  <div class="col-xs-9">
+   <table class="table table-striped">
+ <table class="table table-striped">
    <thead>
    	<tr>
    	 <th>写真</th>
@@ -10,34 +21,20 @@
    <tbody>
    	<% @books.each do |book| %>
    	 <tr>
-   	  <td>写真</td>
-   	  <td><%= book.title %></td>
+   	  <td><%= link_to user_path(book.user.id) do %>
+          <%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
+          <% end %>
+        </td>
+   	  <td><%= link_to book.title, book_path(book.id) %>
+      </td>
    	  <td><%= book.body %></td>
    	 </tr>
    	<% end %>
    </tbody>
  </table>
- <div class="side">
- <h2>User info</h2>
-  <%= form_for(@book, url: 'books#index') do |f| %>
-  <%= render 'layouts/error_messages', model: f.object %>
-    <h4>写真<%= f.attachment_field :image %></h4>
-    <h4>name</h4>
-    <h4>introduction</h4>
+ </div>
+ </div>
+</div>
 
-    <h4><%= f.submit 'user edit' %></h4>
-  <% end %>
-
- <h2>New book</h2>
-  <%= form_for(@book, url: 'books#index') do |f| %>
-  <%= render 'layouts/error_messages', model: f.object %>
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-
-    <h4>Opinion</h4>
-    <%= f.text_area :body %>
-
-    <h4><%= f.submit 'Create Book' %></h4>
-  <% end %>
 
 　
