--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,15 @@
-<% if flash[:notice] %>
-  <p><%= flash[:notice] %></p>
-<% end %>
-
-<h1>Book detail</h1>
- <table>
+<div class="container">
+  <p id="notice"></p>
+  <div class="row">
+  <div class="col-xs-3">
+   <% if flash[:notice] %>
+     <p><%= flash[:notice] %></p>
+   <% end %>
+<%= render 'books/list', user: @user, book: @a %>
+</div>
+<h2>Book detail</h2>
+  <div class="col-xs-9">
+ <table class="table table-striped">
    <thead>
    	<tr>
    	 <th></th>
@@ -12,14 +18,19 @@
    	</tr>
    </thead>
    <tbody>
-   	<% @books.each do |book| %>
    	 <tr>
-   	  <td>写真</td>
-   	  <td><%= book.title %></td>
-   	  <td><%= book.body %></td>
-   	  <td><%= link_to 'Edit', "books#edit" %></td>
-   	  <td><%= link_to 'Destroy', "books#index" %></td>
+   	  <td><div><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', fallback: "no_image.jpg" %></div>
+         <a><%= link_to @book.user.name, user_path(@book.user.id) %></a></td>
+   	  <td><%= @book.title %></td>
+   	  <td><%= @book.body %></td>
+   	  <td><% if @book.user == current_user %>
+        <%= link_to 'Edit', edit_book_path(@book.id), class: "btn-sm btn btn-success" %></td>
+   	  <td>
+      <%= link_to 'Destroy', book_path(@book.id),class: "btn-sm btn btn-danger",method: :delete, "data-confirm" =>"Are you sure?" %></td>
+      <% end %>
    	 </tr>
-   	<% end %>
    </tbody>
  </table>
+ </div>
+ </div>
+</div>
