--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,8 @@
+<div class="container">
+  <p id="notice"></p>
+  <div class="row">
+  <div class="col-md-6 col-md-offset-3">
+  </div>
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -25,8 +30,12 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <div style="margin-top: 5px;" >
+    <%= f.submit "Sign up", class: "col-xs-2 btn btn-success " %>
+   </div>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+ </div>
+</div>
