--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,29 @@
-<h1>User info</h1>
-<%= form_for(@user) do |f| %>
-  <div class="form-group has-icon">
-	<div class="user-edit-image">
-		<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, class: "img-circle pull-left profile-thumb", fallback: "no_image.jpg" %>
-	</div>
-	<label class="control-label sr-only" for="inputEmail">ProfileImage</label>
-	<%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "user-edit-form" %>
+<div class="container">
+  <p id="notice"></p>
+  <div class="row">
+  <div class="col-md-6 col-md-offset-3">
   </div>
+<h1>User info</h1>
+
+<%= form_for(@user) do |f| %>
+<% if @user.errors.any? %>
+  <div class="alert alert-warning">
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <a>error</a>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+   <h4>Name</h4>
+   <%= f.text_field :name %>
+
+   <h4>Image</h4>
+   <%= f.attachment_field :profile_image %>
+
+   <h4>Introduction</h4>
+   <%= f.text_area :introduction %>
+
+   <%= f.submit 'Update User' %>
+<% end %>
