--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,29 @@
-<h1>Users</h1>
- <table>
-   <thead>
-   	<tr>
-   	 <th>写真</th>
-   	 <th>name</th>
-   	 <th></th>
-   	</tr>
-   </thead>
-   <tbody>
-   	<% @books.each do |book| %>
-   	 <tr>
-   	  <td>写真<% attachment_image_tag user,:image %></td>
-   	  <td><%= books.user.name %></td>
-   	  <td>Show<%= "" %></td>
-   	 </tr>
-   	<% end %>
-   </tbody>
- </table>
+<div class="container">
+  <p id="notice"></p>
+  <div class="row">
+  <div class="col-xs-3">
+    <%= render 'books/list', user: current_user, book: @book %>
+  </div>
+  <h2>User</h2>
+  <div class="col-xs-9">
+   <table class="table table-striped">
+     <thead>
+   	  <tr>
+   	   <th>image</th>
+   	   <th>name</th>
+   	   <th></th>
+   	  </tr>
+     </thead>
+     <tbody>
+   	  <% @users.each do |user| %>
+   	   <tr>
+   	    <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, format: 'jpeg', fallback: "no_image.jpg" %></td>
+   	    <td><%= user.name %></td>
+   	    <td><%= link_to 'Show', user_path(user.id)%></td>
+   	   </tr>
+   	  <% end %>
+     </tbody>
+   </table>
+  </div>
+  </div>
+ </div>
