--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,19 @@
-<h1>Books</h1>
-<h1>Users</h1>
- <table>
+<div class="container">
+  <p id="notice"></p>
+  <div class="row">
+  <div class="col-xs-3">
+   <% if flash[:notice] %>
+     <p><%= flash[:notice] %></p>
+   <% end %>
+   <%= render 'books/list', user: @user, book: @book %>
+   </div>
+   <h2>Books</h2>
+  <div class="col-xs-9">
+   <table class="table table-striped">
+ <table class="table table-striped">
    <thead>
    	<tr>
-   	 <th>写真</th>
+   	 <th></th>
    	 <th>Title</th>
    	 <th>Opinion</th>
    	</tr>
@@ -11,10 +21,13 @@
    <tbody>
    	<% @books.each do |book| %>
    	 <tr>
-   	  <td>写真<% attachment_image_tag user,:image %></td>
-   	  <td><%= book.title %></td>
+   	  <td><%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, format: 'jpeg', fallback: "no_image.jpg" %></td>
+   	  <td><%= link_to book.title, book_path(book.id) %></td>
    	  <td><%= book.body %></td>
    	 </tr>
    	<% end %>
    </tbody>
  </table>
+ </div>
+ </div>
+</div>
